Laravel8 + vue3 upgrade

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,15 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "laravel/framework": "^8.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/tinker": "^2.3.0",
+        "spatie/laravel-medialibrary": "^8.7.2",
+        "spatie/laravel-permission": "^3.17",
+        "laravel/ui": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
