--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {
-        "axios": "^0.21",
+    "devDependencies": {        
         "bootstrap-sass": "^3.3.7",
-        "jquery": "^3.6",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
+        "jquery": "^3.6",        
+        "popper.js": "^1.16.1",       
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.14",
-        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12",
         "webpack": "^5.72.1",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^4.9.2",
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
+        "axios": "^0.21",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^2.0.2"
     },
     "dependencies": {
-        "vue-router": "^3.5.2"
+        "vue": "^3.2.19",
+        "vue-loader": "^16.8.1",
+        "vue-router": "^4.0.11"
     }
 }
