--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {        
-        "bootstrap-sass": "^3.3.7",
-        "jquery": "^3.6",        
-        "popper.js": "^1.16.1",       
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vue-template-compiler": "^2.6.12",
-        "webpack": "^5.72.1",
-        "webpack-cli": "^4.9.2",
+    "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
+        "bootstrap-sass": "^3.3.7",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.0.2",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "sweetalert2": "^11.4.17",
         "vue": "^3.2.19",
         "vue-loader": "^16.8.1",
         "vue-router": "^4.0.11"
